fix: navbar popover z-index

--- a/client/src/components/common/Navbar/Navbar.module.sass
+++ b/client/src/components/common/Navbar/Navbar.module.sass
@@ -93,6 +93,7 @@
 		top: 60px
 		left: 0
 		right: 0
+		z-index: $z-index-100
 
 		.box
 			display: grid
